# ticket-queue

./: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js
assets/: styles.css  tailwind.css
client/: .gitignore  Cargo.toml  package-lock.json  package.json
client/assets/: tailwind.css
client/src/: main.rs
client/src/objects/: mod.rs
client/src/views/: home.rs
server/: Cargo.toml
server/src/: main.rs
server/templates/: index.html
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
